--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           <p>Верстка на HTML и CSS <br> Разработка сайтов под ключ</p>
       </div>
       </div>
-      <a class="main-down" href="#"><i class="icon-down"></i></a>
+      <a class="main-down slowly" href="#portfolio"><i class="icon-down"></i></a>
     </div>
 
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
       <div class="container">
         <h2 class="section-header">Портфолио</h2> 
           <div class="row">
@@ -74,14 +74,14 @@
         <div class="col-md-6">
           <strong>Подпишитесь</strong>
           <div class="social-links">
-            <a href="#"><i class="icon-vk"></i></a>
-            <a href="#"><i class="icon-instagram"></i></a>
-            <a href="#"><i class="icon-twitter"></i></a>
+            <a href="https://vk.com/rubrururu"><i class="icon-vk"></i></a>
+            <a href="https://vk.com/rubrururu"><i class="icon-instagram"></i></a>
+            <a href="https://vk.com/rubrururu"><i class="icon-twitter"></i></a>
           </div>
         </div>
         <div class="col-md-3">
           <strong>Напишите мне</strong>
-          <a href="#" class="offer-btn">Заказать сайт</a>
+          <a href="https://vk.me/rubrururu" class="offer-btn">Заказать сайт</a>
         </div>
       </div>
       </div>
@@ -113,6 +113,20 @@
           var work = $(this).attr('data-work');
           var modal = $('.modal');
           modal.find('.modal-body').load(work+'.html');
+        });
+      });
+    </script>
+    <script>
+      $(document).ready(function() {  
+        $(".slowly").on("click", function(event) {
+          // Отменяем стандартную обработку нажатия
+          event.preventDefault();
+          // Забираем идентификатор блока с атрибута href
+          var id = $(this).attr('href'),
+          // Узнаем высоту от начала страницы до блока на который ссылается якорь
+          top = $(id).offset().top;
+          // Анимируем переход на расстояние - top на 900 мс 
+          $('body,html').animate({scrollTop: top}, 900);
         });
       });
     </script>
