--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
 
     <div class="main">
-      // parallax-window" data-parallax="scroll" data-speed="0.4" data-image-src="img/main_bg.jpg
+      <!-- parallax-window" data-parallax="scroll" data-speed="0.4" data-image-src="img/main_bg.jpg -->
       <div class="main-overlay"></div>
       <div class="wrapper">
         <div class="main-header">
