--- a/work-2.html
+++ b/work-2.html
@@ -5,6 +5,6 @@
 	<div class="col-lg-7 modal-txt">
 		<h4>Какой-то сайт №2</h4>
 		<p>Описание сайта</p>
-		<a href="https://vk.me/aislam23" class="modal-btn">Заказать такой сайт</a>
+		<a href="https://vk.me/rubrururu" class="modal-btn">Заказать такой сайт</a>
 	</div>
 </div>
