--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   </head>
   <body>
 
-    <div class="main">
-      <!-- parallax-window" data-parallax="scroll" data-speed="0.4" data-image-src="img/main_bg.jpg -->
+    <div class="main parallax-window" data-parallax="scroll" data-speed="0.4" data-image-src="img/main_bg.jpg">
       <div class="main-overlay"></div>
       <div class="wrapper">
         <div class="main-header">
@@ -107,7 +106,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <!-- <script src="js/parallax.min.js"></script> -->
+    <script src="js/parallax.min.js"></script>
 
     <script>
       $(function() {
